<resources>
    <string name="app_name">rescYOU</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_email">Sign In Via Email</string>
    <string name="sign_in_gmail">Sign In Via Gmail</string>
    <string name="sign_in">Sign In</string>
    <string name="tech_image">Tech Life Vector</string>
    <string name="join_community">Join our community.</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name_req">First Name <font color='#FF0000'>*</font></string>
    <string name="middle_name_req">Middle Name</string>
    <string name="last_name_req">Last Name <font color='#FF0000'>*</font></string>
    <string name="suffix_name_req">Suffix</string>
    <string name="birthday_req">Birthday <font color='#FF0000'>*</font></string>
    <string name="first_name">First Name </string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name </string>
    <string name="suffix_name">Suffix</string>
    <string name="birthday">Birthday </string>
    <string name="display_name">Display Name </string>
    <string name="age">Age</string>
    <string name="account_details">Account Details</string>
    <string name="termsAndCondTitle">Terms and Conditions</string>
    <string name="termsAndConditions">By signing up, you agree to our terms and conditions.</string>
    <string name="continue_button">Continue</string>
    <string name="back">Back</string>
    <string name="accept">I accept and agree to the Terms and Conditions.</string>
    <string name="welcome">Welcome Back</string>
    <string name="email_req">Email <font color='#FF0000'>*</font></string>
    <string name="password_req">Password <font color='#FF0000'>*</font></string>
    <string name="email">Email</string>
    <string name="password">Password </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter your email to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_OTP">OTP Verification</string>
    <string name="send_OTP">We will send you an One Time Password (OTP) on this mobile number.</string>
    <string name="country_code">+63</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="get_OTP">Get OTP</string>
    <string name="entry_OTP">Enter the OTP sent to:</string>
    <string name="OTP">One Time Password (OTP)</string>
    <string name="didnt_getOTP">Didn\'t receive the OTP?</string>
    <string name="resend">Resend OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="info">Information</string>
    <string name="profile">Profile</string>
    <string name="pin_location">Pin My Location</string>
    <string name="describe">Describe your current situation.</string>
    <string name="cancel_pin">Cancel</string>
    <string name="rate_situation">Rate your current situation.</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="critical">Critical</string>
    <string name="catastrophic">Catastrophic</string>
    <string name="type_disaster">Type of Disaster</string>
    <string name="sitio">Enter the Sitio you are in</string>
    <string name="take_photo">Take a Photo</string>
    <string name="add_photo">Add Photos</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out">Sign Out</string>
    <string name="flashlight">Flashlight</string>
    <string name="whistle">Whistle</string>
    <string name="compass">Compass</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="play">PLAY</string>
    <string name="open">OPEN</string>
    <string name="preparedness_tips">Preparedness Tips</string>
    <string name="hotlines">Hotlines</string>
    <string name="evacuation_centers">Evacuation Centers</string>
    <string name="view">VIEW</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="typhoon">Typhoon</string>
    <string name="flood">Flood</string>
    <string name="landslide">Landslide</string>
    <string name="volcanic">Volcanic Eruption</string>
    <string name="source">Source</string>
    <string name="image_source">Image:</string>
    <string name="article_source">Article:</string>
    <string name="title_activity_evacuation_center_map">EvacuationCenterMap</string>
    <string name="view_pin">View Pin</string>
    <string name="send_help">Send Help</string>
    <string name="pinned_by">Pinned by:</string>
    <string name="pinned_by_name">Unknown</string>
    <string name="send_help_name">No one is sending help yet.</string>
    <string name="ratings_current_situation">Ratings of Current Situation:</string>
    <string name="current_situation">Current Situation:</string>
    <string name="situation">Happy</string>
    <string name="your_sitio">Current Sitio:</string>
    <string name="my_pin">My Pin</string>
    <string name="resolved">Resolved</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="msg_token_fmt">hello</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="title_activity_evacuation_centers">EvacuationCenters</string>
    <string name="view_in_map">View in Map</string>
    <string name="occupant_s">Occupant/s:</string>
    <string name="address">Address:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="in_charge">In-Charge:</string>
    <string name="go_back">Go Back</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>