<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="34dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_OTP"
            android:textAlignment="textStart"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_OTP"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_num"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"

            >
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobilelTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/OTP"
                android:inputType="phone"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/didntGetOTPTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_getOTP"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textColor="@color/darker_gray"
                android:layout_marginTop="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"

                >
            </TextView>




        <android.widget.Button
            android:id="@+id/verifyOTPButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/verify"
            android:background="@drawable/rounded_corner"
            android:foregroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="12dp"
            >
        </android.widget.Button>


    </LinearLayout>


</ScrollView>