<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
>

        <ImageView
            android:id="@+id/techLife"
            android:contentDescription="@string/tech_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tech_life_2"
            >
        </ImageView>

        <TextView
            android:id="@+id/joinCommunityTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/join_community"
            android:textAlignment="textStart"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/navy_blue"
            >

        </TextView>

        <android.widget.Button
            android:id="@+id/signUpButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:background="@drawable/rounded_corner"
            android:foregroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            >
        </android.widget.Button>

        <android.widget.Button
            android:id="@+id/signInEmailButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in_email"
            android:background="@drawable/rounded_corner"
            android:foregroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            >
        </android.widget.Button>


        <android.widget.Button
            android:id="@+id/signInGmailButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:text="@string/sign_in_gmail"
            android:background="@drawable/rounded_corner_white"
            android:foregroundTint="@color/white"
            android:textColor="@color/darkest_gray"
            android:textSize="20sp"
            android:elevation="4dp"
            android:drawableStart="@drawable/icons8_google"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

        </android.widget.Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>